--- a/NewBox/templates/index.html
+++ b/NewBox/templates/index.html
@@ -1,12 +1,5 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>NewBox</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Hello World</h1>
-</body>
-</html>
+{% endblock %}
