--- a/NewBox/templates/base.html
+++ b/NewBox/templates/base.html
@@ -12,5 +12,6 @@
         {% block content %}
         {% endblock %}
     </div>
+    <script src="{% static 'app.js' %}"></script>
 </body>
 </html>
