--- a/NewBox/templates/includes/navbar.html
+++ b/NewBox/templates/includes/navbar.html
@@ -1,8 +1,76 @@
+{% load static %}
 <nav class="navbar">
     <div class="top-navbar">
         <h1>newBox</h1>
-        <div class="search-settings">
-            
+        <div class="navbar-search-settings">
+            <div class="navbar-search">
+                <img src="{% static 'images/Search.svg' %}" alt="search button">
+            </div>
+            <div class="navbar-settings">
+                <img src="{% static 'images/Settings.svg' %}" alt="settings button">
+            </div>
         </div>
+    </div>
+    <div class="main-navbar">
+        <a href="#">
+            <div class="main-navbar-button">
+                <div class="navbar-button-image">
+                    <img src="{% static 'images/Playlist.svg' %}" alt="playlist button">
+                </div>
+                <div class="navbar-button-text">
+                    <h2>Playlist</h2>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-navbar-button">
+                <div class="navbar-button-image">
+                    <img src="{% static 'images/Songs.svg' %}" alt="songs button">
+                </div>
+                <div class="navbar-button-text">
+                    <h2>Songs</h2>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-navbar-button">
+                <div class="navbar-button-image">
+                    <img src="{% static 'images/Artist.svg' %}" alt="artist button">
+                </div>
+                <div class="navbar-button-text">
+                    <h2>Artist</h2>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-navbar-button">
+                <div class="navbar-button-image">
+                    <img src="{% static 'images/Genre.svg' %}" alt="genres button">
+                </div>
+                <div class="navbar-button-text">
+                    <h2>Genres</h2>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-navbar-button">
+                <div class="navbar-button-image">
+                    <img src="{% static 'images/Albums.svg' %}" alt="album button">
+                </div>
+                <div class="navbar-button-text">
+                    <h2>Albums</h2>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-navbar-button">
+                <div class="navbar-button-image">
+                    <img src="{% static 'images/Download.svg' %}" alt="download button">
+                </div>
+                <div class="navbar-button-text">
+                    <h2>Downloaded</h2>
+                </div>
+            </div>
+        </a>
     </div>
 </nav>
