--- a/NewBox/templates/base.html
+++ b/NewBox/templates/base.html
@@ -12,6 +12,7 @@
         {% block content %}
         {% endblock %}
     </div>
-    <script src="{% static 'app.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>!window.jQuery && document.write('<script src="{% static 'jquery-3.6.0.min.js' %}"><\/script>')</script>
 </body>
 </html>
