--- a/NewBox/templates/base.html
+++ b/NewBox/templates/base.html
@@ -13,6 +13,7 @@
         {% endblock %}
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>!window.jQuery && document.write('<script src="{% static 'jquery-3.6.0.min.js' %}"><\/script>')</script>
+    <script>!window.jQuery && document.write('<script src="{% static 'js/jquery.min.js' %}"><\/script>')</script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
