Added urls and template for javascript testing.

--- a/NewBox/templates/includes/navbar.html
+++ b/NewBox/templates/includes/navbar.html
@@ -6,6 +6,7 @@
             <div class="navbar-search-small">
                 <img src="{% static 'images/Search.svg' %}" alt="search button">
             </div>
+            <label for="navbar-search"></label>
             <input type="text" name="search" id="navbar-search" placeholder="Type here to search">
             <div class="navbar-cross-small">
                 <img src="{% static 'images/Cross-small.svg' %}" alt="cross">
@@ -22,7 +23,7 @@
     </div>
     <div class="main-navbar">
         <a href="#">
-            <div class="main-navbar-button">
+            <div class="main-navbar-button button-playlist">
                 <div class="navbar-button-image">
                     <img src="{% static 'images/Playlist.svg' %}" alt="playlist button">
                 </div>
@@ -32,7 +33,7 @@
             </div>
         </a>
         <a href="#">
-            <div class="main-navbar-button">
+            <div class="main-navbar-button button-songs">
                 <div class="navbar-button-image">
                     <img src="{% static 'images/Songs.svg' %}" alt="songs button">
                 </div>
@@ -42,7 +43,7 @@
             </div>
         </a>
         <a href="#">
-            <div class="main-navbar-button">
+            <div class="main-navbar-button button-artist">
                 <div class="navbar-button-image">
                     <img src="{% static 'images/Artist.svg' %}" alt="artist button">
                 </div>
@@ -52,7 +53,7 @@
             </div>
         </a>
         <a href="#">
-            <div class="main-navbar-button">
+            <div class="main-navbar-button button-genres">
                 <div class="navbar-button-image">
                     <img src="{% static 'images/Genre.svg' %}" alt="genres button">
                 </div>
@@ -62,17 +63,17 @@
             </div>
         </a>
         <a href="#">
-            <div class="main-navbar-button">
+            <div class="main-navbar-button button-albums">
                 <div class="navbar-button-image">
                     <img src="{% static 'images/Albums.svg' %}" alt="album button">
                 </div>
-                <div class="navbar-button-text">
+                <div class="navbar-button-text button-albums">
                     <h2>Albums</h2>
                 </div>
             </div>
         </a>
         <a href="#">
-            <div class="main-navbar-button">
+            <div class="main-navbar-button button-downloaded">
                 <div class="navbar-button-image">
                     <img src="{% static 'images/Download.svg' %}" alt="download button">
                 </div>
