--- a/NewBox/templates/base.html
+++ b/NewBox/templates/base.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <title>NewBox</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
 </head>
 <body>
-    <div id="container">
-        {% include 'includes/navbar.html' %}
-        {% block content %}
-        {% endblock %}
-    </div>
+<div id="container">
+    {% include 'includes/navbar.html' %}
+    {% block content %}
+    {% endblock %}
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script>!window.jQuery && document.write('<script src="{% static 'js/jquery.min.js' %}"><\/script>')</script>
-    <script src="{% static 'js/script.js' %}"></script>
+    <script defer src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
