--- a/NewBox/templates/download.html
+++ b/NewBox/templates/download.html
@@ -2,6 +2,13 @@
 
 {% block content %}
     <div id="sub-container">
-
+        <div id="songs-downloaded">
+            <div class="song-downloaded">
+                <h1>Song 1</h1>
+            </div>
+            <div class="song-downloaded">
+                <h1>Song 2</h1>
+            </div>
+        </div>
     </div>
 {% endblock %}
