--- a/NewBox/templates/base.html
+++ b/NewBox/templates/base.html
@@ -17,5 +17,6 @@
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script>!window.jQuery && document.write('<script src="{% static 'js/jquery.min.js' %}"><\/script>')</script>
     <script defer src="{% static 'js/script.js' %}"></script>
+    <script defer src="{% static 'js/pages.js' %}"></script>
 </body>
 </html>
