--- a/NewBox/templates/base.html
+++ b/NewBox/templates/base.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
 </head>
+<script defer src="{% static 'js/pages.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+<script>!window.jQuery && document.write('<script src="{% static 'js/jquery.min.js' %}"><\/script>')</script>
+<script defer src="{% static 'js/script.js' %}"></script>
 <body>
 <div id="container">
     {% include 'includes/navbar.html' %}
     {% block content %}
     {% endblock %}
 </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
-    <script>!window.jQuery && document.write('<script src="{% static 'js/jquery.min.js' %}"><\/script>')</script>
-    <script defer src="{% static 'js/script.js' %}"></script>
-    <script defer src="{% static 'js/pages.js' %}"></script>
 </body>
 </html>
