--- a/NewBox/templates/includes/footer.html
+++ b/NewBox/templates/includes/footer.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-    <div class="footer"
+    <div class="footer">
 
-         <div/>
+
+    </div>
+
 </body>
 </html>
