- added new icons - added entry for the footer.html

--- a/NewBox/templates/base.html
+++ b/NewBox/templates/base.html
@@ -16,6 +16,7 @@
 <script defer src="{% static 'js/script.js' %}"></script>
 <div id="container">
     {% include 'includes/navbar.html' %}
+    {% include 'includes/footer.html' %}
     {% block content %}
     {% endblock %}
 </div>
