--- a/NewBox/templates/includes/footer.html
+++ b/NewBox/templates/includes/footer.html
@@ -1,49 +1,90 @@
 {% load static %}
 
-
-<footer class="footer">
- <div class="footer-navbar">
+<div class="footer">
+    <div class="main-footer">
         <a href="#">
             <div class="main-footer-button button-one">
-                <div class="footer-button-image">
+                <div class="main-footer-button-image">
                     <img src="{% static 'images/1.svg' %}" alt="1 button">
                 </div>
             </div>
         </a>
         <a href="#">
             <div class="main-footer-button button-two">
-                <div class="footer-button-image">
+                <div class="main-footer-button-image">
                     <img src="{% static 'images/2.svg' %}" alt="2 button">
                 </div>
             </div>
         </a>
         <a href="#">
             <div class="main-footer-button button-three">
-                <div class="footer-button-image">
+                <div class="main-footer-button-image">
                     <img src="{% static 'images/3.svg' %}" alt="3 button">
                 </div>
             </div>
         </a>
         <a href="#">
             <div class="main-footer-button button-four">
-                <div class="footer-button-image">
+                <div class="main-footer-button-image">
                     <img src="{% static 'images/4.svg' %}" alt="4 button">
                 </div>
             </div>
         </a>
         <a href="#">
             <div class="main-footer-button button-five">
-                <div class="footer-button-image">
+                <div class="main-footer-button-image">
                     <img src="{% static 'images/5.svg' %}" alt="5 button">
                 </div>
             </div>
         </a>
         <a href="#">
             <div class="main-footer-button button-six">
-                <div class="footer-button-image">
+                <div class="main-footer-button-image">
                     <img src="{% static 'images/6.svg' %}" alt="6 button">
                 </div>
             </div>
         </a>
+        <a href="#">
+            <div class="main-footer-button button-previous">
+                <div class="main-footer-button-image">
+                    <img src="{% static 'images/previous.svg' %}" alt="6 button">
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-footer-button button-play">
+                <div class="main-footer-button-image">
+                    <img src="{% static 'images/play-pause.svg' %}" alt="6 button">
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-footer-button button-next">
+                <div class="main-footer-button-image">
+                    <img src="{% static 'images/next.svg' %}" alt="6 button">
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-footer-button button-six">
+                <div class="main-footer-button-image">
+                    <img src="{% static 'images/mute.svg' %}" alt="6 button">
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-footer-button button-six">
+                <div class="main-footer-button-image">
+                    <img src="{% static 'images/volume_down.svg' %}" alt="6 button">
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="main-footer-button button-six">
+                <div class="main-footer-button-image">
+                    <img src="{% static 'images/volume_up.svg' %}" alt="6 button">
+                </div>
+            </div>
+        </a>
     </div>
-</footer>
+</div>
