--- a/NewBox/static/style.css
+++ b/NewBox/static/style.css
@@ -22,7 +22,11 @@
 .navbar {
     position: fixed;
     width: 100%;
-    padding: 65px 6%;
+    /*padding: 65px 6%;*/
+    padding-left: 6%;
+    padding-right: 6%;
+    padding-bottom: 0%;
+    padding-top: 6%;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -207,7 +211,11 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    padding: 6%;
+    /*padding: 6%;*/
+    padding-left: 6%;
+    padding-right: 6%;
+    padding-bottom: 2%;
+    padding-top: 2%;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -221,11 +229,27 @@
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.3);
     height: 60px;
+    display: grid;
 }
 
 .main-footer-button-image {
-    text-align: center;
+    margin: auto;
+}
 
+.top-footer {
+    background-color: rgba(255, 255, 255, 0.2);
+    margin-bottom: 25px;
+    border-radius: 10px;
+    height: 80px;
+}
+
+.top-footer img {
+    border-radius: 10px;
+    margin-right: 25px;
+}
+
+.song-title h2 {
+    font-size: 32px;
 }
 
 /*END FOOTER*/
