--- a/NewBox/templates/includes/footer.html
+++ b/NewBox/templates/includes/footer.html
@@ -1,6 +1,22 @@
 {% load static %}
 
 <div class="footer">
+    <div class="top-footer">
+        <a href="#">
+            <div class="top-footer button-one">
+                <div class="top-footer-button-image">
+                    <img src="{% static 'images/placeholder.svg' %}" alt="1 button">
+                </div>
+                <div class="top-footer-button-text">
+                    <h2 class="song-title">Can't Feel My Face</h2>
+                </div>
+                <div class="top-footer-button-text">
+                    <h2 class="song-artist">Can't Feel My Face</h2>
+                </div>
+            </div>
+        </a>
+    </div>
+
     <div class="main-footer">
         <a href="#">
             <div class="main-footer-button button-one">
