--- a/NewBox/static/style.css
+++ b/NewBox/static/style.css
@@ -25,7 +25,6 @@
     /*padding: 65px 6%;*/
     padding-left: 6%;
     padding-right: 6%;
-    padding-bottom: 0%;
     padding-top: 6%;
     background-color: rgba(0, 0, 0, 0.4);
 }
@@ -211,11 +210,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    /*padding: 6%;*/
-    padding-left: 6%;
-    padding-right: 6%;
-    padding-bottom: 2%;
-    padding-top: 2%;
+    padding: 2% 6%;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -237,6 +232,8 @@
 }
 
 .top-footer {
+    display: flex;
+    justify-content: space-between;
     background-color: rgba(255, 255, 255, 0.2);
     margin-bottom: 25px;
     border-radius: 10px;
@@ -245,11 +242,27 @@
 
 .top-footer img {
     border-radius: 10px;
-    margin-right: 25px;
 }
 
-.song-title h2 {
-    font-size: 32px;
+.top-footer-button-text {
+
+    color: white;
+    font-size: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.top-footer-button-text .song-artist {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.queue-button {
+    display: flex;
+    align-self: flex-end;
+    float: right;
+    margin-bottom: auto;
+    margin-top: auto;
+    margin-right: 50px;
 }
 
 /*END FOOTER*/
