--- a/NewBox/templates/includes/footer.html
+++ b/NewBox/templates/includes/footer.html
@@ -4,8 +4,8 @@
     <div class="top-footer">
         <a href="#"> <img src="{% static 'images/placeholder.svg' %}" alt="album cover button"></a>
         <div class="top-footer-button-text">
-            <h2>Can't Feel My Face</h2>
-            <h2 class="song-artist">Can't Feel My Face</h2>
+            <h2>Title</h2>
+            <h2 class="song-artist">Artist</h2>
         </div>
         <div class="queue-button">
             <a href="#"> <img src="{% static 'images/Queue.svg' %}" alt="album cover button"></a>
