--- a/NewBox/templates/includes/navbar.html
+++ b/NewBox/templates/includes/navbar.html
@@ -9,7 +9,7 @@
             <label for="navbar-search"></label>
             <input type="text" name="search" id="navbar-search" placeholder="Type here to search">
             <div class="navbar-cross-small">
-                <img src="{% static 'images/Cross-small.svg' %}" alt="cross">
+                <img src="{% static 'images/Cross.svg' %}" alt="cross">
             </div>
         </div>
         <div class="navbar-search-settings">
