--- a/NewBox/templates/base.html
+++ b/NewBox/templates/base.html
@@ -10,6 +10,7 @@
 <body>
 <script defer src="{% static 'js/pages.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>!window.axios && document.write('<script src="{% static 'js/axios.min.js' %}"><\/script>')</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 <script>!window.jQuery && document.write('<script src="{% static 'js/jquery.min.js' %}"><\/script>')</script>
