- change name off classes

--- a/NewBox/templates/includes/footer.html
+++ b/NewBox/templates/includes/footer.html
@@ -78,21 +78,21 @@
             </div>
         </a>
         <a href="#">
-            <div class="main-footer-button button-six">
+            <div class="main-footer-button button-mute">
                 <div class="main-footer-button-image">
                     <img src="{% static 'images/mute.svg' %}" alt="6 button">
                 </div>
             </div>
         </a>
         <a href="#">
-            <div class="main-footer-button button-six">
+            <div class="main-footer-button button-voldown">
                 <div class="main-footer-button-image">
                     <img src="{% static 'images/volume_down.svg' %}" alt="6 button">
                 </div>
             </div>
         </a>
         <a href="#">
-            <div class="main-footer-button button-six">
+            <div class="main-footer-button button-volup">
                 <div class="main-footer-button-image">
                     <img src="{% static 'images/volume_up.svg' %}" alt="6 button">
                 </div>
