--- a/NewBox/templates/login.html
+++ b/NewBox/templates/login.html
@@ -1,5 +1,7 @@
-<form action="/your-name/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
+<form action="login" method="post">
+    <label for="username">username: </label>
+    <input type="text" name="username" id="username">
+    <label for="password">password: </label>
+    <input type="password" name="password" id = "password"><br>
+    <input type="submit">
 </form>
