--- a/NewBox/static/style.css
+++ b/NewBox/static/style.css
@@ -327,6 +327,7 @@ a:link, a:visited, a:hover {
     display: inline-block;
     width: 60px;
     height: 34px;
+    margin-left: 20px;
   }
   
   /* Hide default HTML checkbox */
@@ -362,11 +363,11 @@ a:link, a:visited, a:hover {
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #33cc22;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #33cc22;
   }
   
   input:checked + .slider:before {
@@ -388,4 +389,48 @@ a:link, a:visited, a:hover {
     /*font-size: 20px;*/
 }
 
- /*END ADMIN-PANEL*/
+h1 {
+    color: white;
+    padding: 15px;
+}
+
+.button-11 {
+   margin-left: 20px;
+    flex-direction: column;
+    align-items: center;
+    padding: 6px 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+    border-radius: 6px;
+    color: #3D3D3D;
+    background: #fff;
+    border: none;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-11:focus {
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+    outline: 0;
+}
+
+.textbox {
+    margin-bottom: 10px;
+    margin-left: 20px;
+    flex-direction: column;
+    align-items: center;
+    padding: 6px 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+    border-radius: 6px;
+    color: #3D3D3D;
+    background: #fff;
+    border: none;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+
+/*END ADMIN-PANEL*/
