--- a/NewBox/static/style.css
+++ b/NewBox/static/style.css
@@ -395,7 +395,7 @@ h1 {
 }
 
 .button-11 {
-   margin-left: 20px;
+    margin-left: 20px;
     flex-direction: column;
     align-items: center;
     padding: 6px 14px;
@@ -408,6 +408,7 @@ h1 {
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    width: 110px;
 }
 
 .button-11:focus {
@@ -416,6 +417,7 @@ h1 {
 }
 
 .textbox {
+    width: 250px;
     margin-bottom: 10px;
     margin-left: 20px;
     flex-direction: column;
