--- a/NewBox/static/style.css
+++ b/NewBox/static/style.css
@@ -391,7 +391,7 @@ a:link, a:visited, a:hover {
 
 h1 {
     color: white;
-    padding: 15px;
+    padding: 20px;
 }
 
 .button-11 {
@@ -414,6 +414,10 @@ h1 {
 .button-11:focus {
     box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
     outline: 0;
+
+}.button-11:hover {
+    transform: scale(110%);
+    transition: transform 0.1s;
 }
 
 .textbox {
